fixtures/benchmark/negatives/n03.ts
const label = "gpt-5-chat-latest";
